# parallax-protocol-arena

./: .gitignore  .luarc.json  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: asteroids.json
assets/scripts/: flight_controller.lua  frigate.lua  missile_bot.lua
bindings/: FromJs.ts  ToJs.ts  bindings.ts
docs/: unguided_missile_design.md
examples/: arena.rs  cmd.rs  cmd_server.rs  event_marker.rs  maplike.rs  two_scripts.rs
src/: agent_runtime.rs  cmd_server.rs  input_handler.rs  keyboard_controller.rs  lib.rs  lua_utils.rs  main.rs  missile_bot.rs  prelude.rs  sensor.rs  trajectory.rs  utils.rs
src/client/: event_markers.rs  input_handler.rs  mod.rs  trajectory.rs  visibility.rs
src/crafts/: asteroid.rs  frigate.rs  mining_drone.rs  missile_bot.rs  mod.rs  plasma_drone.rs
src/physics/: collisions.rs  entity_major.rs  mod.rs  test_utils.rs  timeline.rs
src/subsystems/: engines.rs  flight_controller.rs  missile.rs  mod.rs  plasma_cannon.rs  sensors.rs  unguided_missile.rs
ts/: api.ts  example.ts  runtime.d.ts  runtime.ts
