[package]
name = "parallax-protocol-arena"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
# bevy = "0.14.2"
bevy = { version = "0.15", features = ["dynamic_linking"] }
anyhow = "1.0.92"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
ustr = "1.1.0"
assert_approx_eq = "1.1.0"
bevy_vector_shapes = "0.9.2"
bevy_pancam = "0.16.0"
serde = "1.0.215"
serde_json = "1.0.133"
rand = { version = "0.8.5", features = ["small_rng"] }
rtree_rs = "0.1.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
